--- a/ui/html/login.page.tmpl
+++ b/ui/html/login.page.tmpl
@@ -56,7 +56,7 @@
         <div class="text-center mt-6">
           <p class="text-sm text-gray-600">
             Don't have an account? 
-            <a href="#" class="font-medium text-blue-500 hover:text-blue-700 transition duration-200">Sign up</a>
+            <a href="/signup" class="font-medium text-blue-500 hover:text-blue-700 transition duration-200">Sign up</a>
           </p>
         </div>
       </div>
