--- a/ui/html/signup.page.tmpl
+++ b/ui/html/signup.page.tmpl
@@ -93,7 +93,7 @@
             <p class="text-sm text-gray-600">
               Already has an account?
               <a
-                href="#"
+                href="/login"
                 class="font-medium text-blue-500 hover:text-blue-700 transition duration-200"
                 >login</a
               >
